--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # File handling
   archive: ^3.4.0
   file_picker: ^8.0.0
+  image_picker: ^1.0.7
+  image: ^4.0.17
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/badges/
+    - assets/images/package_icons/
     - assets/fonts/
 
   fonts:
