--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jbr
+
+# Set Java toolchain to version 17 to avoid obsolete Java 8 warnings
+org.gradle.java.toolchain.version=17
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=true
