--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   image_picker: ^1.0.7
   image: ^4.0.17
 
+  # Text-to-Speech
+  flutter_tts: ^4.2.0
+  http: ^1.2.0
+  audioplayers: ^6.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
