--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   speech_to_text: ^7.0.0
   http: ^1.2.0
   audioplayers: ^6.1.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
